fixed page layout issue with login

--- a/src/styles/projects/projects.scss
+++ b/src/styles/projects/projects.scss
@@ -1,17 +1,27 @@
 @import '../config';
 
-.projectsList {
+.projects {
     align-items: flex-start;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 100%;
     text-align: center;
+    width: 100%;
 
     .project {
         background-color: $secondary-color;
         color: $primary-color;
-        margin: 0.5rem;
+        cursor: pointer;
+        margin: 1rem;
+        opacity: 1;
         padding: 1rem;
+        width: 25vw;
+
+        &:hover {
+            opacity: 0.9;
+        }
 
         h4 {
             text-decoration: underline;
